--- a/src/css/projectCard.scss
+++ b/src/css/projectCard.scss
@@ -49,7 +49,7 @@
 
 
 .project-card-info{
-  max-height: 450px;
+  // max-height: 450px;
   margin-bottom: 50px;
   // max-width: 600px;
   h1{
